JSAI/error/src/test/resources/base/precision_add.js
print(1 + 2)
1 + 2
/*** EXPECT: 3 ***/
